Fixed squashed nav bar controls issue. scss tweeks.

--- a/css/juicebox-bootstrap.scss
+++ b/css/juicebox-bootstrap.scss
@@ -15,8 +15,8 @@ $track-height: 32px;
 $track-aggregate-height: $track-count * $track-height;
 
 //
-$hic-viewport-width: 700px;
-$hic-viewport-height:700px;
+$hic-viewport-width: 800px;
+$hic-viewport-height:800px;
 $hic-viewport-spinner-size: 120px;
 
 //
